Check bounds when constructing OME-XML primitives
This prevents files from failing to initialize because e.g. the Z step
was set to 0.

In particular, this fixes an annoying Deltavision bug noticed by
Sebastien Besson.